# website_project.buyme

./: base.py  main_test.py  pyproject.toml
pages/: gift_page.py  intro_page.py  sender_and_resiver_page.py
